--- a/app/src/main/res/layout/image_likeness.xml
+++ b/app/src/main/res/layout/image_likeness.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:textSize="12dp" />
+        android:textSize="12sp" />
 
     <TextView
         android:layout_width="wrap_content"
