--- a/app/src/main/res/layout/image_likeness.xml
+++ b/app/src/main/res/layout/image_likeness.xml
@@ -67,4 +67,13 @@
         android:layout_marginBottom="10dp"
         android:onClick="onClick" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/showName"
+        android:layout_alignTop="@+id/btnBack"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
