--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/darkBlueBarTop"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="15dp"
         android:text="Name:"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#006B87" />
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/amsName"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="10dp"
         android:text="Email:"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#006B87" />
@@ -35,7 +35,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/amsEmail"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="10dp"
         android:text="Testimony:"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#006B87" />
@@ -94,19 +94,21 @@
     <EditText
         android:id="@+id/nameInput"
         android:layout_width="230sp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/amsEmail"
+        android:layout_height="38sp"
+        android:layout_below="@+id/darkBlueBarTop"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="5dp"
         android:inputType="text|textCapSentences" />
 
     <EditText
         android:id="@+id/emailInput"
         android:layout_width="230sp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/amsTestimony"
+        android:layout_height="38sp"
+        android:layout_below="@+id/nameInput"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="0dp"
         android:inputType="textEmailAddress" />
 
     <TextView
@@ -173,11 +175,12 @@
 
     <EditText
         android:layout_width="900dp"
-        android:layout_height="wrap_content"
+        android:layout_height="38sp"
         android:id="@+id/testimonyInput"
         android:layout_below="@+id/amsTestimony"
-        android:inputType="text|textCapSentences"
+        android:inputType="text|textMultiLine|textCapSentences"
         android:layout_alignStart="@+id/amsName"
+        android:singleLine="false"
         android:layout_alignEnd="@+id/emailInput" />
 
     <!-- To display picture taken -->
@@ -188,7 +191,7 @@
         android:visibility="invisible"
         android:layout_below="@+id/testimonyInput"
         android:layout_alignParentEnd="false"
-        android:layout_marginTop="45sp"
+        android:layout_marginTop="80sp"
         android:layout_alignParentStart="false"
         android:layout_marginLeft="60sp" />
 
@@ -201,7 +204,31 @@
         android:layout_below="@+id/testimonyInput"
         android:layout_toEndOf="@+id/btnRecordVideo"
         android:layout_alignParentEnd="false"
-        android:layout_marginTop="10sp"
+        android:layout_marginTop="30sp"
         android:layout_marginRight="40sp" />
+
+    <!--
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:text="Deal #:"
+            android:id="@+id/amsDeal"
+            android:layout_below="@+id/testimonyInput"
+            android:textColor="#006B87"/>
+
+        <EditText
+            android:id="@+id/dealInput"
+            android:layout_width="230sp"
+            android:layout_height="38sp"
+            android:layout_below="@+id/testimonyInput"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="0dp"
+            android:inputType="text" />
+
+    -->
 
 </RelativeLayout>
