--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,8 @@
         android:layout_alignTop="@+id/btnRecordVideo"
         android:layout_marginLeft="80dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/testimonial" />
+        android:background="@drawable/testimonial"
+        android:onClick="submitBtnClicked" />
 
     <EditText
         android:id="@+id/nameInput"
