Added Next and Done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dp"
+        android:imeOptions="actionNext"
         android:inputType="text|textCapSentences" />
 
     <EditText
@@ -109,6 +110,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginRight="20dp"
         android:layout_marginTop="0dp"
+        android:imeOptions="actionNext"
         android:inputType="textEmailAddress" />
 
     <TextView
@@ -178,9 +180,9 @@
         android:layout_height="38sp"
         android:id="@+id/testimonyInput"
         android:layout_below="@+id/amsTestimony"
-        android:inputType="text|textMultiLine|textCapSentences"
+        android:inputType="text|textCapSentences"
         android:layout_alignStart="@+id/amsName"
-        android:singleLine="false"
+        android:imeOptions="actionDone"
         android:layout_alignEnd="@+id/emailInput" />
 
     <!-- To display picture taken -->
