Updated Next and Done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,6 +100,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dp"
         android:imeOptions="actionNext"
+        android:singleLine="true"
         android:inputType="text|textCapSentences" />
 
     <EditText
@@ -111,6 +112,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="0dp"
         android:imeOptions="actionNext"
+        android:singleLine="true"
         android:inputType="textEmailAddress" />
 
     <TextView
@@ -183,6 +185,7 @@
         android:inputType="text|textCapSentences"
         android:layout_alignStart="@+id/amsName"
         android:imeOptions="actionDone"
+        android:singleLine="true"
         android:layout_alignEnd="@+id/emailInput" />
 
     <!-- To display picture taken -->
@@ -193,7 +196,7 @@
         android:visibility="invisible"
         android:layout_below="@+id/testimonyInput"
         android:layout_alignParentEnd="false"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="50sp"
         android:layout_alignParentStart="false"
         android:layout_marginLeft="40sp" />
 
@@ -217,7 +220,7 @@
         android:textColor="#ff870000"
         android:textSize="12sp"
         android:textStyle="normal"
-        android:id="@+id/TOSagreement"
+        android:id="@+id/tosAgreement"
         android:onClick="onClick"
         android:layout_below="@+id/testimonyInput"
         android:layout_centerHorizontal="true"
