--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -17,9 +17,10 @@
         android:id="@+id/wifiLogo"
         android:background="@drawable/wifi"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:textAlignment="center"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentStart="false" />
 
     <Button
         android:layout_width="wrap_content"
@@ -31,7 +32,7 @@
         android:id="@+id/enterBtn"
         android:background="@drawable/enterapp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="360dp"
         android:textAlignment="center"
         android:layout_centerHorizontal="true" />
 
@@ -45,7 +46,7 @@
         android:gravity="center"
         android:id="@+id/wifiMsg"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="250dp"
         android:textAlignment="center"
         android:layout_centerHorizontal="true"
         android:nestedScrollingEnabled="true"
